--- a/package.json
+++ b/package.json
@@ -27,5 +27,18 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
+  },
+
+  "name": "CV-Portfolio",
+  "version": "0.0.0",
+  "type": "module",
+  "homepage": "https://silviomattosjr.github.io/CV-Portfolio/",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   }
 }
